--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-
 <title>Coba</title>
-
 </head>
-
 <body>
-
-	<h1>Faizal</h1>	
-  <p>saat ini aya coba²</p>
-
+	<h1>Faizal</h1>
+	<p>saat ini saya coba²</p>
+	<hr>
+	<p>ini hanya coba²</p>
 </body>
-
 </html>
