--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </header>
 
         <div class="pembuka">
-            <p class="pKiri">Windows merupakan Operating system yang sudah tidak asing lagi. Mulai anak muda hingga tua banyak yang menggunakan windows, bahan disetiap laptop hingga perusahaan korporat sekali pun menggunakan sistem operasi ini.</p>
+            <p class="pKiri">Windows merupakan operating system yang sudah tidak asing lagi. Mulai anak muda hingga tua banyak yang menggunakan windows, bahan disetiap laptop hingga perusahaan korporat sekali pun menggunakan sistem operasi ini.</p>
             <p class="pKanan">Dalam perkembangannya, windwos sudah banyak mengalami perubahan hingga kini versi windows 10. Semua perkembangan ini dikarenakan semakin majunya teknologi yang berkembang. Sehingga windows dapat bertahan dan menjadi sistem operasi paling banyak digunakan.</p>
         </div>
 
